--- a/DMH/index.html
+++ b/DMH/index.html
@@ -46,9 +46,10 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo me-auto">
+        <a href="index.html"><img src="assets/img/dmh logo1.png" alt="" class="img-fluid"></a>
         <h1><a href="index.html">DMH Packaging LLP</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="index.html"><img src="assets/img/dmh logo1.png" alt="" class="img-fluid"></a>
+       
       </div>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
@@ -56,9 +57,9 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#testimonials">Testimonials</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto " href="#portfolio">Products</a></li>
+          <li><a class="nav-link scrollto" href="#testimonials">Our Team</a></li>
+          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -74,7 +75,7 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -93,8 +94,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="container text-center text-md-left" data-aos="fade-up">
-      <h1>Welcome to <span>Lumia</span></h1>
-      <h2>We are team of talented designers making websites with Bootstrap</h2>
+      <h1>Welcome to <span>DMH Packaging LLP</span></h1>
+      <h2> - Your Trusted Source for Quality Packaging</h2>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
@@ -106,32 +107,32 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>What We Do</h2>
-          <p>Magnam dolores commodi suscipit consequatur ex aliquid</p>
+          <h2>Why Corrugated Boxes</h2>
+          <p>At DMH Packaging, we're passionate about corrugated boxes. With a commitment to quality and innovation, we're your go-to partner for all your packaging needs.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <div class="icon"><i class="bx bx-box"></i></div>
+              <h4><a href="">Strength and durability</a></h4>
+              <p>Corrugated boxes are known for their ability to withstand stacking, crushing, and rough handling during transit.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Sed ut perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="">Customizability</a></h4>
+              <p>They can be easily customized in terms of size, shape, and printing to reflect branding.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <div class="icon"><i class="bx bx-recycle"></i></div>
+              <h4><a href="">Recyclability</a></h4>
+              <p>Corrugated cardboard is highly recyclable and eco-friendly.</p>
             </div>
           </div>
 
@@ -151,22 +152,22 @@
           <div class="col-lg-6 pt-4 pt-lg-0">
             <h3>About Us</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Established in 2023, DMH Packaging LLP has been a reliable name in the corrugated packaging industry. Our dedication to quality and customer satisfaction sets us apart.
             </p>
             <ul>
-              <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bx bx-check-double"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+              <li><i class="bx bx-check-double"></i>Quality is at the heart of everything we do. From the selection of premium materials to our state-of-the-art production processes, we ensure that every corrugated box leaving our mill meets the highest standards of durability and craftsmanship.</li>
+              <li><i class="bx bx-check-double"></i>Our success is built on strong, long-lasting relationships with our clients. We take the time to understand your unique packaging challenges and collaborate closely to develop solutions that align with your brand and business goals.</li>
             </ul>
             <div class="row icon-boxes">
               <div class="col-md-6">
                 <i class="bx bx-receipt"></i>
-                <h4>Corporis voluptates sit</h4>
-                <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                <h4>Our Mission</h4>
+                <p>Our mission is to provide businesses with cost-effective, sustainable, and versatile corrugated packaging solutions.</p>
               </div>
               <div class="col-md-6 mt-4 mt-md-0">
                 <i class="bx bx-cube-alt"></i>
-                <h4>Ullamco laboris nisi</h4>
-                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                <h4>Our Expertise</h4>
+                <p>With decades of collective experience in corrugated box manufacturing, our skilled team at DMH Packaging brings expertise and dedication to every project.</p>
               </div>
             </div>
           </div>
@@ -176,7 +177,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills">
+    <!-- <section id="skills" class="skills">
       <div class="container">
 
         <div class="row skills-content">
@@ -234,7 +235,7 @@
         </div>
 
       </div>
-    </section><!-- End Skills Section -->
+    </section>End Skills Section -->
 
     <!-- ======= Counts Section ======= -->
     <section id="counts" class="counts">
@@ -245,32 +246,32 @@
           <div class="col-lg-3 col-6">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Happy Clients</p>
+              <span data-purecounter-start="0" data-purecounter-end="124" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Satisfied Clients</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-6">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Projects</p>
+              <span data-purecounter-start="0" data-purecounter-end="154" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Projects handled</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-6 mt-5 mt-lg-0">
             <div class="count-box">
-              <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hours Of Support</p>
+              <i class="bi bi-box"></i>
+              <span data-purecounter-start="0" data-purecounter-end="500" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Capacity of production in tonns</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hard Workers</p>
+              <span data-purecounter-start="0" data-purecounter-end="30" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Hard Workers at production house</p>
             </div>
           </div>
 
