--- a/DMH/index.html
+++ b/DMH/index.html
@@ -46,7 +46,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo me-auto">
-        <a href="index.html"><img src="assets/img/dmh logo1.png" alt="" class="img-fluid"></a>
+        <a href="index.html" class="img-a"><img src="assets/img/dmh logo1.png" alt="" class="img-fluid"></a>
         <h1><a href="index.html">DMH Packaging LLP</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
        
@@ -81,12 +81,12 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <div class="header-social-links d-flex align-items-center">
+      <!-- <div class="header-social-links d-flex align-items-center">
         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-      </div>
+      </div> -->
 
     </div>
   </header><!-- End Header -->
