--- a/DMH/index.html
+++ b/DMH/index.html
@@ -286,29 +286,35 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem</p>
+          <p>At DMH Packaging, we are dedicated to providing a comprehensive range of corrugated packaging services tailored to meet the diverse needs of our valued clients. Our commitment to quality, innovation, and sustainability sets us apart as your trusted packaging partner.</p>
         </div>
 
         <div class="row">
           <div class="col-md-6">
             <div class="icon-box">
               <i class="bi bi-briefcase"></i>
-              <h4><a href="#">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4><a href="#">Custom Corrugated Boxes:</a></h4>
+              <p><strong>Tailored Solutions:</strong> We specialize in creating custom corrugated boxes that precisely match your unique packaging requirements. Whether it's a specific size, shape, or design, we'll work closely with you to bring your vision to life.
+                <br>
+                <strong>Branding and Printing:</strong> Elevate your brand with our custom printing and branding services. Add logos, graphics, and messaging to make your packaging stand out on the shelf.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-lg-0">
             <div class="icon-box">
               <i class="bi bi-card-checklist"></i>
-              <h4><a href="#">Dolor Sitema</a></h4>
-              <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <h4><a href="#">Stock Corrugated Boxes:</a></h4>
+              <p><strong>Ready-Made Solutions:</strong>Browse our selection of stock corrugated boxes, available in various sizes and styles for quick and convenient packaging solutions. 
+                <br>
+                <strong>Quick Turnaround:</strong> Our stock boxes are readily available and can be shipped to you with minimal lead time, perfect for those urgent packaging needs</p>
             </div>
           </div>
           <div class="col-md-6 mt-4">
             <div class="icon-box">
               <i class="bi bi-bar-chart"></i>
-              <h4><a href="#">Sed ut perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <h4><a href="#">Printing And Branding:</a></h4>
+              <p><strong>High-Quality Printing:</strong> Our advanced printing capabilities ensure sharp, vibrant, and consistent printing on your corrugated boxes.
+                <br>
+                <strong>Custom Graphics:</strong>From logos to product information, we can incorporate your unique graphics to enhance your brand's visibility.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4">
