--- a/DMH/index.html
+++ b/DMH/index.html
@@ -100,7 +100,7 @@
     <div class="container text-center text-md-left" data-aos="fade-up">
       <h1>Welcome to <span>DMH Packaging LLP</span></h1>
       <h2> - Your Trusted Source for Quality Packaging</h2>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <a href="#what-we-do" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
 
