--- a/DMH/index.html
+++ b/DMH/index.html
@@ -458,7 +458,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Two Piece Conatiner</a></h4>
+                <h4><a href="portfolio-details.html">Two Piece Container</a></h4>
                 <p>Corrugated Boxes</p>
               </div>
             </div>
