done adjusting service box sizing

--- a/DMH/index.html
+++ b/DMH/index.html
@@ -896,13 +896,13 @@
 
   <!-- js for leadlet maps -->
   <script>
-    var map = L.map('map',{center : [23.1142197,72.6288903], zoom: 14.3});
+    var map = L.map('map',{center : [23.310879,72.404289], zoom: 12.2});
     L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
     maxZoom: 19,
     // attribution: '&copy; <a href="http://www.openstreetmap.org/copyright"></a>'
     }).addTo(map);
-    L.marker([23.1142197,72.6288903]).addTo(map)
-    .bindPopup('Entrepreneurship Development<br> Institute Of India')
+    L.marker([23.310879,72.404289]).addTo(map)
+    .bindPopup('DHM Packaging LLP')
     .openPopup(); 
   </script>
 
