--- a/DMH/index.html
+++ b/DMH/index.html
@@ -297,7 +297,7 @@
           <div class="col-md-6">
             <div class="icon-box">
               <i class="bi bi-wrench"></i>
-              <h4><a href="#">Custom Corrugated Boxes:</a></h4>
+              <h4><a href="#">Custom Corrugated Boxes</a></h4>
               <p><strong>Tailored Solutions:</strong> We specialize in creating custom corrugated boxes that precisely match your unique packaging requirements. Whether it's a specific size, shape, or design, we'll work closely with you to bring your vision to life.
                 <br>
                 <strong>Branding and Printing:</strong> Elevate your brand with our custom printing and branding services. Add logos, graphics, and messaging to make your packaging stand out on the shelf.</p>
@@ -306,7 +306,7 @@
           <div class="col-md-6 mt-4 mt-lg-0">
             <div class="icon-box">
               <i class="bi bi-boxes"></i>
-              <h4><a href="#">Stock Corrugated Boxes:</a></h4>
+              <h4><a href="#">Stock Corrugated Boxes</a></h4>
               <p><strong>Ready-Made Solutions:</strong>Browse our selection of stock corrugated boxes, available in various sizes and styles for quick and convenient packaging solutions. 
                 <br>
                 <strong>Quick Turnaround:</strong> Our stock boxes are readily available and can be shipped to you with minimal lead time, perfect for those urgent packaging needs</p>
@@ -315,7 +315,7 @@
           <div class="col-md-6 mt-4">
             <div class="icon-box">
               <i class="bi bi-printer"></i>
-              <h4><a href="#">Printing And Branding:</a></h4>
+              <h4><a href="#">Printing And Branding</a></h4>
               <p><strong>High-Quality Printing:</strong> Our advanced printing capabilities ensure sharp, vibrant, and consistent printing on your corrugated boxes.
                 <br>
                 <strong>Custom Graphics:</strong>From logos to product information, we can incorporate your unique graphics to enhance your brand's visibility.</p>
@@ -324,7 +324,7 @@
           <div class="col-md-6 mt-4">
             <div class="icon-box">
               <i class="bi bi-recycle"></i>
-              <h4><a href="#">Sustainable Packaging:</a></h4>
+              <h4><a href="#">Sustainable Packaging</a></h4>
               <p><strong>Eco-Friendly Materials:</strong> We are committed to sustainability and offer eco-friendly packaging solutions. Our corrugated boxes are made from recycled materials, and we strive to minimize our environmental impact.
                 <br>
                 <strong>Consultation:</strong> Let us help you make environmentally responsible packaging choices that align with your sustainability goals.</p>
@@ -333,7 +333,7 @@
           <div class="col-md-6 mt-4">
             <div class="icon-box">
               <i class="bi bi-person-workspace"></i>
-              <h4><a href="#">Packaging Consultation:</a></h4>
+              <h4><a href="#">Packaging Consultation</a></h4>
               <p><strong>Expert Guidance:</strong> Our knowledgeable team is available to provide packaging consultations. We can help you optimize your packaging processes for efficiency and cost-effectiveness.
                 <strong>Material Recommendations:</strong> We'll recommend the most suitable materials and styles to protect your products during shipping and storage.</p>
             </div>
@@ -341,7 +341,7 @@
           <div class="col-md-6 mt-4">
             <div class="icon-box">
               <i class="bi bi-truck"></i>
-              <h4><a href="#">Shipping and Logistics Support:</a></h4>
+              <h4><a href="#">Shipping and Logistics Support</a></h4>
               <p><strong>Timely Delivery:</strong> We understand the importance of timely delivery. Count on us to ensure your packaging materials arrive when you need them.
                 <br>
                 <strong>Inventory Management:</strong> Streamline your supply chain by taking advantage of our inventory management services, which help you maintain optimal stock levels.</p>
