--- a/DMH/index.html
+++ b/DMH/index.html
@@ -605,18 +605,17 @@
 
         <div class="section-title">
           <h2>Team</h2>
-          <p>Sit sint consectetur velit quos quisquam cupiditate nemo qui</p>
+          <p>Meet the dedicated team of experts behind <strong>DMH Packaging</strong>.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <!-- <img src="assets/img/team/profile_thumbnail.png" alt=""> -->
-              <h4>Walter White</h4>
-              <span>Chief Executive Officer</span>
+              <h4>Dhruv Patel</h4>
+              <span>Stakeholder</span>
               <p>
-                Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
-                Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
+                Passionate about the art and science of corrugated box production, He brings 8 years of dedicated experience to the table. His journey in this industry has been marked by a commitment to quality, innovation, and continuous improvement.
               </p>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
@@ -630,11 +629,10 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <!-- <img src="assets/img/team/profile_thumbnail.png" alt=""> -->
-              <h4>Sarah Jhinson</h4>
-              <span>Product Manager</span>
+              <h4>Miraj Chaudhary</h4>
+              <span>Stakeholder</span>
               <p>
-                Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
-                Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
+                With a dynamic career spanning various industries and roles, He thrives on challenges and adaptability. His extensive experience has equipped him with a multifaceted skill set, making him a valuable asset in diverse business environments.
               </p>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
@@ -648,11 +646,10 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <!-- <img src="assets/img/team/profile_thumbnail.png" alt=""> -->
-              <h4>William Anderson</h4>
-              <span>CTO</span>
+              <h4>Kaushal Parikh</h4>
+              <span>Stakeholder</span>
               <p>
-                Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
-                Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
+                A passionate and results-driven leader with a proven track record of guiding teams to success. His leadership philosophy revolves around fostering collaboration, empowering team members, and driving organizational growth through innovation and strategic vision.
               </p>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
@@ -666,11 +663,10 @@
           <div class="col-lg-6 mx-auto col-md-6 d-flex align-items-stretch">
             <div class="member">
               <!-- <img src="assets/img/team/profile_thumbnail.png" alt=""> -->
-              <h4>William Anderson</h4>
-              <span>CTO</span>
+              <h4>Hitesh Shukla</h4>
+              <span>Stakeholder</span>
               <p>
-                Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
-                Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
+                An accomplished serial entrepreneur with a passion for identifying opportunities and building successful businesses across various industries. He thrives in dynamic environments, managing and growing multiple ventures simultaneously.
               </p>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
@@ -684,11 +680,10 @@
           <div class="col-lg-6 mx-auto col-md-6 d-flex align-items-stretch">
             <div class="member">
               <!-- <img src="assets/img/team/profile_thumbnail.png" alt=""> -->
-              <h4>William Anderson</h4>
-              <span>CTO</span>
+              <h4>Dishant Mehta</h4>
+              <span>Chief Operating Officer</span>
               <p>
-                Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
-                Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
+                A seasoned professional with a strong background in machinery management and a proven track record of optimizing operational efficiency. His leadership and technical skills combined make him a valuable asset in accomplishing complex machinery operations via managing teams.
               </p>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
@@ -711,7 +706,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fuga</p>
+          <p>You can contact us through any channels from below and we'll be more than happy to help you out.</p>
         </div>
 
         <div class="row mt-5 justify-content-center">
@@ -723,19 +718,19 @@
                 <div class="col-lg-4 info">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street<br>New York, NY 535022</p>
+                  <p>Part-C, SN-888, Nr.Kamlamrut Pharma<br>Village:- Irana, Kadi <br>Mehsana:-382715</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@example.com<br>contact@example.com</p>
+                  <p>info@dmhpackagingllp.com<br>dishant.mehta@dmhpackagingllp.com</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>+1 5589 55488 51<br>+1 5589 22475 14</p>
+                  <p>+91 7383214363</p>
                 </div>
               </div>
             </div>
@@ -752,7 +747,7 @@
         <!-- action="forms/contact.php" method="post" -->
         <div class="section-title">
           <h2>Get in touch</h2>
-          <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fuga</p>
+          <p>Reach out to us for inquiries, quotes, or any assistance you may need. Our friendly team is here to help you find the perfect packaging solution.</p>
         </div>
 
 
