--- a/DMH/index.html
+++ b/DMH/index.html
@@ -793,13 +793,10 @@
         <div class="row">
 
           <div class="col-lg-4 col-md-6 footer-contact">
-            <h3>Lumia</h3>
-            <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+            <h3>DMH Packaging LLP</h3>
+            <p><strong> Part-C, SN-888, Nr.Kamlamrut Pharma<br>Village:- Irana, Kadi <br>Mehsana:-382715</p></strong>
+             <p><strong>Phone:</strong> +91 7383214363<br>
+              <strong>Email:</strong> info@dmhpackagingllp.com<br>
             </p>
           </div>
 
