modified product page

--- a/DMH/portfolio-details.html
+++ b/DMH/portfolio-details.html
@@ -50,11 +50,11 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Products</a></li>
-          <li><a class="nav-link scrollto" href="#team">Our Team</a></li>
+          <li><a class="nav-link scrollto active" href="/DMH/#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="/DMH/#about">About</a></li>
+          <li><a class="nav-link scrollto" href="/DMH/#services">Services</a></li>
+          <li><a class="nav-link scrollto " href="/DMH/#portfolio">Products</a></li>
+          <li><a class="nav-link scrollto" href="/DMH/#team">Our Team</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -97,7 +97,7 @@
           <h2>Portfoio Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li>Product Details</li>
           </ol>
         </div>
 
@@ -110,8 +110,9 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
+          <div class="col-lg-8 product-image" >
+            <img src="assets/img/portfolio/duplex.jpeg" alt="duplex-img">
+            <!-- <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
@@ -128,7 +129,7 @@
 
               </div>
               <div class="swiper-pagination"></div>
-            </div>
+            </div> -->
           </div>
 
           <div class="col-lg-4">
@@ -165,9 +166,9 @@
 
           <div class="col-lg-4 col-md-6 footer-contact">
             <h3>DMH Packaging LLP</h3>
-            <p><strong> Part-C, SN-888, Nr.Kamlamrut Pharma<br>Village:- Irana, Kadi <br>Mehsana:-382715</p></strong>
-             <p><strong>Phone:</strong> +91 7383214363<br>
-              <strong>Email:</strong> info@dmhpackagingllp.com<br>
+            <p><a href="https://www.google.com/maps/place/23%C2%B018'39.2%22N+72%C2%B024'15.4%22E/@23.3108788,72.4017143,17z/data=!3m1!4b1!4m4!3m3!8m2!3d23.3108788!4d72.4042892?entry=ttu"><strong> Part-C, SN-888, Nr.Kamlamrut Pharma<br>Village:- Irana, Kadi <br>Mehsana:-382715</p></strong></a>
+             <p ><a href = "tel:+91 7383214363"><strong>Phone:</strong> +91 7383214363<br> </a>
+              <a href = "mailto:info@dmhpackagingllp.com"><strong>Email:</strong> info@dmhpackagingllp.com<br></a>
             </p>
           </div>
 
