changes mail fields

--- a/DMH/index.html
+++ b/DMH/index.html
@@ -866,10 +866,10 @@
     function sendEmail(){
       Email.send({
     Host : "smtp.elasticemail.com",
-    Username : "tejdoshi5@gmail.com",
-    Password : "2847F7D42C58128C3EA83D6268100DD8FC1E",
+    Username : "dishant.mehta@dmhpackagingllp.com",
+    Password : "2EE84E58B89AD71737213C050BB7FC11D4AC",
     To : 'dishant.mehta@dmhpackagingllp.com',
-    From : "tejdoshi5@gmail.com",
+    From : "dishant.mehta@dmhpackagingllp.com",
     Subject : "New enquiry",
     Body : "Name:-" + document.getElementById('name').value +
     "<br> Email:- " + document.getElementById('email').value +
