--- a/DMH/index.html
+++ b/DMH/index.html
@@ -868,7 +868,7 @@
     Host : "smtp.elasticemail.com",
     Username : "dishant.mehta@dmhpackagingllp.com",
     Password : "2EE84E58B89AD71737213C050BB7FC11D4AC",
-    To : 'dishant.mehta@dmhpackagingllp.com',
+    To : 'info@dmhpackagingllp.com',
     From : "dishant.mehta@dmhpackagingllp.com",
     Subject : "New enquiry",
     Body : "Name:-" + document.getElementById('name').value +
