centered the header

--- a/DMH/index.html
+++ b/DMH/index.html
@@ -718,8 +718,8 @@
                 <div class="col-lg-4 info">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>Part-C, SN-888, Nr.Kamlamrut Pharma<br>Village:- Irana, Kadi <br>Mehsana:-382715</p>
-                </div>
+                  <p><a href="https://www.google.com/maps/place/23%C2%B018'39.2%22N+72%C2%B024'15.4%22E/@23.3108788,72.4017143,17z/data=!3m1!4b1!4m4!3m3!8m2!3d23.3108788!4d72.4042892?entry=ttu"><strong> Part-C, SN-888, Nr.Kamlamrut Pharma<br>Village:- Irana, Kadi <br>Mehsana:-382715</p></strong></a>
+              </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-envelope"></i>
@@ -730,7 +730,7 @@
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>+91 7383214363</p>
+                  <p ><a href = "tel:+91 7383214363"><strong>Phone:</strong> +91 7383214363<br> </a>
                 </div>
               </div>
             </div>
@@ -797,6 +797,7 @@
             <p><a href="https://www.google.com/maps/place/23%C2%B018'39.2%22N+72%C2%B024'15.4%22E/@23.3108788,72.4017143,17z/data=!3m1!4b1!4m4!3m3!8m2!3d23.3108788!4d72.4042892?entry=ttu"><strong> Part-C, SN-888, Nr.Kamlamrut Pharma<br>Village:- Irana, Kadi <br>Mehsana:-382715</p></strong></a>
              <p ><a href = "tel:+91 7383214363"><strong>Phone:</strong> +91 7383214363<br> </a>
               <a href = "mailto:info@dmhpackagingllp.com"><strong>Email:</strong> info@dmhpackagingllp.com<br></a>
+              <a href = "mailto:dishant.mehta@dmhpackagingllp.com"><strong>Email:</strong> dishant.mehta@dmhpackagingllp.com<br></a>
             </p>
           </div>
 
