added few product pages

--- a/DMH/index.html
+++ b/DMH/index.html
@@ -379,11 +379,11 @@
               <figure>
                 <img src="assets/img/portfolio/rsc.jpeg" class="img-fluid" alt="">
                 <a href="assets/img/portfolio/rsc.jpeg" data-gallery="portfolioGallery" class="link-preview portfolio-lightbox" title="Preview"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="rsc.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Regular Slotted Container</a></h4>
+                <h4><a href="rsc.html">Regular Slotted Container</a></h4>
                 <p>Corrugated Boxes</p>
               </div>
             </div>
@@ -394,11 +394,11 @@
               <figure>
                 <img src="assets/img/portfolio/overlap.jpeg" class="img-fluid" alt="">
                 <a href="assets/img/portfolio/overlap.jpeg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="overlap.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Overlap Slotted Cartons</a></h4>
+                <h4><a href="overlap.html">Overlap Slotted Cartons</a></h4>
                 <p>Corrugated Cartons</p>
               </div>
             </div>
@@ -409,11 +409,11 @@
               <figure>
                 <img src="assets/img/portfolio/duplex.jpeg" class="img-fluid" alt="">
                 <a href="assets/img/portfolio/duplex.jpeg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="duplex.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Duplex Box</a></h4>
+                <h4><a href="duplex.html">Duplex Box</a></h4>
                 <p>Corrugated Boxes</p>
               </div>
             </div>
@@ -424,11 +424,11 @@
               <figure>
                 <img src="assets/img/portfolio/sheets.jpeg" class="img-fluid" alt="">
                 <a href="assets/img/portfolio/sheets.jpeg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="sheets.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Corrugated Sheets</a></h4>
+                <h4><a href="sheets.html">Corrugated Sheets</a></h4>
                 <p>Sheets/Rolls</p>
               </div>
             </div>
@@ -439,11 +439,11 @@
               <figure>
                 <img src="assets/img/portfolio/internal.jpeg" class="img-fluid" alt="">
                 <a href="assets/img/portfolio/internal.jpeg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="internal.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Internal Section Cartons</a></h4>
+                <h4><a href="internal.html">Internal Section Cartons</a></h4>
                 <p>Corrugated Cartons</p>
               </div>
             </div>
@@ -454,11 +454,11 @@
               <figure>
                 <img src="assets/img/portfolio/twopiece.jpeg" class="img-fluid" alt="">
                 <a href="assets/img/portfolio/twopiece.jpeg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="twopiece.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Two Piece Container</a></h4>
+                <h4><a href="twopiece.html">Two Piece Container</a></h4>
                 <p>Corrugated Boxes</p>
               </div>
             </div>
