--- a/DMH/rsc.html
+++ b/DMH/rsc.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Lumia Bootstrap Template</title>
+  <title>Product Details</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -26,13 +26,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Lumia
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/lumia-bootstrap-business-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -111,7 +104,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-8 product-image" >
-            <img src="assets/img/portfolio/duplex.jpeg" alt="duplex-img">
+            <img src="assets/img/portfolio/rsc.jpeg" alt="duplex-img">
             <!-- <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
@@ -134,19 +127,18 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Product Information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Corrugated Boxes</li>
+                <li><strong>Client</strong>: Confidential</li>
+                <li><strong>Project date</strong>: 16 September, 2023</li>
+                <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Product Summary</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
+                Regular Slotted Cartons, often abbreviated as RSC, are one of the most common and versatile types of packaging solutions used across various industries. These cartons are known for their simplicity, efficiency, and ability to provide reliable protection for a wide range of products during transit and storage.
             </div>
           </div>
 
